load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")

package(default_visibility = ["//visibility:public"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

mongo_cc_library(
    name = "virtual_collection",
    srcs = [
        "external_record_store.cpp",
        "multi_bson_stream_cursor.cpp",
    ],
    hdrs = [
        "csv_file.h",
        "external_record_store.h",
        "input_stream.h",
        "multi_bson_stream_cursor.h",
        "//src/mongo/db/catalog:external_data_source_options_gen",
    ],
    deps = [
        "csv_file",
        "//src/mongo/db/storage:record_store_base",
        "//src/mongo/transport/named_pipe",
    ],
)

mongo_cc_library(
    name = "csv_file",
    srcs = [
        "csv_file.cpp",
    ],
    hdrs = [
        "csv_file.h",
        "//src/mongo/db/query:query_knobs_gen",
        "//src/mongo/db/storage:default_path.h",
        "//src/mongo/transport/named_pipe:input_object.h",
        "//src/mongo/transport/named_pipe:io_error_message.h",
    ],
    deps = [
        "//src/mongo/db/query:query_knobs",
        "//src/mongo/db:server_base",
    ],
)
